Confirm Model Service Date being PUT to Database

--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -732,6 +732,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
+                                    <action selector="confirmButtonTapped:" destination="z9b-YW-Wvm" eventType="touchUpInside" id="jil-lk-X3G"/>
                                     <action selector="loginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lKn-6z-2eU"/>
                                 </connections>
                             </button>
